# MiniDeck

./: .gitignore  Hotkey.py  LICENCE  README.md  RadialMenu.py  application.py  config.json  db.py  installedapps.py  installer_script.iss  main.py  pyproject.toml  requirements.txt  settings.py  theme.py
.github/workflows/: ruff.yml
